--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,9 @@ dependencies:
   shared_preferences: ^2.2.2
   google_fonts: ^6.1.0
   intl: ^0.19.0
+  file_picker: ^8.0.0
+  url_launcher: ^6.2.5
+  mime: ^1.0.5
 
 dev_dependencies:
   flutter_test:
