--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   mime: ^1.0.5
   firebase_core: ^3.13.0
   firebase_messaging: ^15.2.5
+  video_player: ^2.8.0
+  chewie: ^1.8.0
 
 dev_dependencies:
   flutter_test:
