--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1
 
 environment:
   sdk: '>=3.2.3 <4.0.0'
@@ -42,6 +42,7 @@ dependencies:
   intl: ^0.19.0
   file_picker: ^8.0.0
   url_launcher: ^6.2.5
+  package_info_plus: ^9.0.0
   mime: ^1.0.5
   firebase_core: ^3.13.0
   firebase_messaging: ^15.2.5
