--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_messaging: ^15.2.5
   video_player: ^2.8.0
   chewie: ^1.8.0
+  path_provider: ^2.1.4
 
 dev_dependencies:
   flutter_test:
